feat(various): optimize code with seo
